Update IACET meta

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -10,12 +10,12 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
    <meta name="description"
-      content="{% block meta_desc %}Access top-quality online training courses for construction and general industries professionals. We provide free courses and bulk discounts. Start learning now!{% endblock %}" />
+      content="{% block meta_desc %}Get IACET-accredited online training for construction and industry professionals. Earn CEUs. Free courses, bulk discounts, and certifications available!{% endblock %}" />
    <meta name="author" content="{% block meta_author %}{% endblock %}" />
    <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
    <meta name="robots" content="all" />
 
-   <title>{% block title %}Safety Training and Certification | pdhsafety.com{% endblock %}</title>
+   <title>{% block title %}IACET Accredited Safety Training Courses | pdhsafety.com{% endblock %}</title>
 
    <link rel="icon" type="image/png" href="{% static 'edutim/images/logo100.png' %}" />
 
@@ -180,10 +180,11 @@
                   <img src="{% static 'edutim/images/logo100.png' %}" width="100" height="100"
                      alt="Make Safety Training Happen" title="NYC Construction Safety Training (PdhSafety.com)"
                      class="img-fluid" />
-                     <img src="{% static 'images/iacet.png' %}" height="100"
-                     alt="IACET Accredited" title="IACET Accredited" />
+                  <img src="{% static 'images/iacet.png' %}" height="100" alt="IACET Accredited"
+                     title="IACET Accredited" />
                </a>
-               {% comment %} <span class="mr-auto top-logo-tagline d-none d-md-none d-lg-block d-xl-block">Make Safety Training
+               {% comment %} <span class="mr-auto top-logo-tagline d-none d-md-none d-lg-block d-xl-block">Make Safety
+                  Training
                   Happen</span> {% endcomment %}
 
                <form method="get" class="" action="{% url 'courses_list' %}">
@@ -332,8 +333,9 @@
          <div class="row">
             <div class="col text-center">
                <img title="IACET Accredited" class="lazy img-fluid" data-src="{% static 'images/iacet_349.png' %}"
-             alt="IACET Accredited" />
-             <img title="Money back guarantee" class="lazy img-fluid" data-src="{% static 'images/money_back.png' %}" width="400" height="293" alt="money back" />
+                  alt="IACET Accredited" />
+               <img title="Money back guarantee" class="lazy img-fluid" data-src="{% static 'images/money_back.png' %}"
+                  width="400" height="293" alt="money back" />
             </div>
          </div>
       </div>
