--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -6,10 +6,13 @@
 
 {% block title %}
 {% if object.metas.first.meta_title %}{{object.metas.first.meta_title}} | pdhsafety.com{% else %}
-{{object.title }} Course | pdhsafety.com{% endif %}{% endblock %}
+{{object.title }} Course | pdhsafety.com{% endif %}
+{% endblock %}
 
-{% block meta_desc %}{% if object.metas.first.meta_description %}{{object.metas.first.meta_description}}{% else %}Best
-Price Online {{ object.subject }}, Access 24/7 On All Devices. Easy To Take, Money Back Guarante{% endif %}
+{% block meta_desc %}
+{% if object.metas.first.meta_description %}{{object.metas.first.meta_description}}{% else %}
+Complete {{ object.subject }} online with PDH Safety. IACET Accredited Provider. Earn CEUs and a certificate. 100% online, fast, and trusted by industry professionals.
+{% endif %}
 {% endblock %}
 
 {% block head %}
